App is reading from the locations txt and displaying results in combobox. No filter funct on combobox yet - will add in polish stage. Moving on to using inputs to look up lat and long

--- a/Veour.csproj
+++ b/Veour.csproj
@@ -9,6 +9,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\Files\locations-ranked.txt" />
+    <None Remove="Assets\Files\locations.txt" />
+    <None Remove="Assets\Images\logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\Files\locations-ranked.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.9" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.9" />
@@ -17,8 +29,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Assets\Files\" />
-    <Folder Include="Assets\Images\" />
+    <Resource Include="Assets\Files\locations.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\Images\logo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
