Created custom error page and logic for missing text file containing City/States. Also handled errors for bad network requests to the open-meteo API

--- a/Veour.csproj
+++ b/Veour.csproj
@@ -35,7 +35,7 @@
 
   <ItemGroup>
     <EmbeddedResource Include="Assets\Files\locations-ranked.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
 
@@ -109,6 +109,12 @@
     <Content Include="Assets\Images\Weather\sun.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Views\FireErrorView.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
